[package]
name = "sos"
version = "0.0.0"
authors = ["Arbel Israeli <arbel03@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
spin = "0.4.5"

[dependencies.compiler_builtins]
path = "/home/arbel03/.rustup/toolchains/nightly-i686-unknown-linux-gnu/lib/rustlib/src/rust/src/libcompiler_builtins"