[package]
name = "binaries"
version = "0.1.0"
authors = ["Arbel Israeli <arbel03@gmail.com>"]

[profile.release]
panic="abort"

[profile.dev]
panic="abort"

[dependencies]
std = { path="std" }

[[bin]]
name = "cat"
path = "cat.rs"

[[bin]]
name = "shell"
path = "shell.rs"

[[bin]]
name = "ls"
path = "ls.rs"

[[bin]]
name = "stat"
path = "stat.rs"

[[bin]]
name = "ps"
path = "ps.rs"